upload file add

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -147,3 +147,6 @@ xss:
   excludes: /system/notice
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
+
+junction:
+  uploadPath: http://weixin.junction.com.cn/jsUpload2/system/upload/app/save.shtml
